# NeuraNet

./: '  .env  .gitignore  2  SECURITY.md  abstra.json  env.example  file1.go  go.mod  go.sum  main.sh  model.h5  model_46  package-lock.json  package.json  readme.md  token.json
.github/: FUNDING.yml
Artificial_Intelligence/: CID's.txt  conversation_mode.py  conversation_mode_2.0.py  conversation_mode_3.0.py  conversation_mode_4.0.py  conversation_mode_BERT.py  conversation_mode_classification.py  conversation_mode_working.py  credentials.json  current_topic.txt  exploration_mode.py  googletest.py  readme.md  test.py  topics.txt  train_model.py
Banbury_Cloud/: .env  readme.md
GUI/: bot_script.py  window.py
Multiple_Knapsack_Algorithm/: main.py  readme.md  test.py  test_time_complexity.py
NeuraNet/: .gitignore  nginx.conf  readme.md
NeuraNet/backend/rust/server/: Cargo.toml
NeuraNet/backend/rust/server/src/: calldb.rs  main.rs
NeuraNet/backend/rust/server/src/handlers/: calldb.rs  client_handler.rs  database_handler.rs  device_handler.rs  file_handler.rs  login_handler.rs  message_handler.rs  mod.rs  old_client_handler.rs  ping_handler.rs  profile_handler.rs  registration_handler.rs
NeuraNet/server/: Cargo.toml  Dockerfile  readme.md
NeuraNet/server/src/: lib.rs  main.rs
NeuraNet/server/src/handlers/: client_handler.rs  database_handler.rs  message_handler.rs  ping_handler.rs  registration_handler.rs
User_Management/: build.gradle  model.mwb  model.mwb.bak  pom.xml  users.sql  web.xml
docs/: bounties.md  getstarted.md  hts-log.txt  index.html
(+638 files in other folders)
