[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
tungstenite = "0.17"
bcrypt = "0.12"
url = "2.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0"
[dependencies.mongodb]
version = "2.8.2"
default-features = false
features = ["async-std-runtime"]

