[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
tungstenite = "0.17"
url = "2.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
